--- a/ConferenceSystem.DAL/ConferenceSystem.DAL.csproj
+++ b/ConferenceSystem.DAL/ConferenceSystem.DAL.csproj
@@ -107,8 +107,17 @@
     <Compile Include="Data\UserIdentity\AppUserRole.cs" />
     <Compile Include="Data\Workshop.cs" />
     <Compile Include="Data\WorkshopsBlock.cs" />
+    <Compile Include="Migrations\201804281325223_InitDB.cs" />
+    <Compile Include="Migrations\201804281325223_InitDB.Designer.cs">
+      <DependentUpon>201804281325223_InitDB.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201804281325223_InitDB.resx">
+      <DependentUpon>201804281325223_InitDB.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
