--- a/ConferenceSystemTests/app.config
+++ b/ConferenceSystemTests/app.config
@@ -8,7 +8,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="DotVVM.Framework" publicKeyToken="23f3607db32275da" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.1.7.0" newVersion="1.1.7.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.9.0" newVersion="1.1.9.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -24,7 +24,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DotVVM.Core" publicKeyToken="23f3607db32275da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.9.0" newVersion="1.1.9.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
