Add "create invoice" during register and show invoice in admin portal

--- a/ConferenceSystem.DAL/ConferenceSystem.DAL.csproj
+++ b/ConferenceSystem.DAL/ConferenceSystem.DAL.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Data\Cartering.cs" />
     <Compile Include="Data\DbContext.cs" />
     <Compile Include="Data\DbInitializer.cs" />
+    <Compile Include="Data\Invoice.cs" />
     <Compile Include="Data\Organization.cs" />
     <Compile Include="Data\Secrets.cs" />
     <Compile Include="Data\UserIdentity\AppRole.cs" />
