--- a/ConferenceSystem.BL/packages.config
+++ b/ConferenceSystem.BL/packages.config
@@ -3,6 +3,8 @@
   <package id="AutoMapper" version="6.2.2" targetFramework="net452" />
   <package id="DotVVM.Core" version="1.1.7" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="HtmlRenderer.Core" version="1.5.0.5" targetFramework="net452" />
+  <package id="HtmlRenderer.PdfSharp" version="1.5.0.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
@@ -14,4 +16,5 @@
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="PDFsharp" version="1.32.3057.0" targetFramework="net452" />
 </packages>
