--- a/ConferenceSystem/packages.config
+++ b/ConferenceSystem/packages.config
@@ -32,8 +32,10 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.1.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="PDFsharp" version="1.32.3057.0" targetFramework="net452" />
   <package id="popper.js" version="1.12.3" targetFramework="net452" />
   <package id="System.Collections" version="4.0.11" targetFramework="net452" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net452" />
