--- a/ConferenceSystem.BL/ConferenceSystem.BL.csproj
+++ b/ConferenceSystem.BL/ConferenceSystem.BL.csproj
@@ -135,7 +135,9 @@
     <Compile Include="DTO\AppUserDTO.cs" />
     <Compile Include="DTO\CarteringDTO.cs" />
     <Compile Include="DTO\CarteringUsers.cs" />
+    <Compile Include="DTO\ConstantDTO.cs" />
     <Compile Include="DTO\InvoiceDTO.cs" />
+    <Compile Include="DTO\TextDTO.cs" />
     <Compile Include="MapperInitializer.cs" />
     <Compile Include="DTO\OrganizationDTO.cs" />
     <Compile Include="DTO\UserCartering.cs" />
@@ -146,12 +148,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AdminService.cs" />
     <Compile Include="Services\CarteringService.cs" />
+    <Compile Include="Services\ConstantService.cs" />
     <Compile Include="Services\DateProcessing.cs" />
     <Compile Include="Services\EmailService.cs" />
     <Compile Include="Services\ExportService.cs" />
     <Compile Include="Services\LoginService.cs" />
     <Compile Include="Services\RegisterService.cs" />
     <Compile Include="Services\ResetPasswordService.cs" />
+    <Compile Include="Services\TextService.cs" />
     <Compile Include="Services\UserManagment\AppRoleManager.cs" />
     <Compile Include="Services\UserManagment\AppRoleStore.cs" />
     <Compile Include="Services\UserManagment\AppUserManager.cs" />
