--- a/ConferenceSystem.BL/ConferenceSystem.BL.csproj
+++ b/ConferenceSystem.BL/ConferenceSystem.BL.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Services\EmailService.cs" />
     <Compile Include="Services\ExportService.cs" />
     <Compile Include="Services\LoginService.cs" />
+    <Compile Include="Services\RegisterLecturerService.cs" />
     <Compile Include="Services\RegisterService.cs" />
     <Compile Include="Services\ResetPasswordService.cs" />
     <Compile Include="Services\TextService.cs" />
