Ignore Web.config files with connection string to db.

--- a/.gitignore
+++ b/.gitignore
@@ -305,3 +305,5 @@ ConferenceSystem/temp/
 DBconnection.txt
 ConferenceSystem.DAL/Web.config
 ConferenceSystem/Web.config
+ConferenceSystem.DAL/Web.config
+ConferenceSystem/Web.config
