--- a/ConferenceSystem/ConferenceSystemApp.csproj
+++ b/ConferenceSystem/ConferenceSystemApp.csproj
@@ -182,6 +182,7 @@
     <Compile Include="ViewModels\Admin\EmailRegisterViewModel.cs" />
     <Compile Include="ViewModels\Admin\SettingVariablesViewModel.cs" />
     <Compile Include="ViewModels\Admin\LecturersViewModel.cs" />
+    <Compile Include="ViewModels\Admin\LecturerViewModel.cs" />
     <Compile Include="ViewModels\PwdResetViewModel.cs" />
     <Compile Include="ViewModels\User\CarteringSelectViewModel.cs" />
     <Compile Include="ViewModels\DefaultViewModel.cs" />
@@ -286,6 +287,7 @@
     <Content Include="Views\User\RegisterFormLecturer.dothtml" />
     <Content Include="Views\User\RegistrationCompleteVisitor.dothtml" />
     <Content Include="Views\Admin\Lecturers.dothtml" />
+    <Content Include="Views\Admin\Lecturer.dothtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
