--- a/ConferenceSystem.BL/ConferenceSystem.BL.csproj
+++ b/ConferenceSystem.BL/ConferenceSystem.BL.csproj
@@ -136,6 +136,7 @@
     <Compile Include="DTO\CarteringDTO.cs" />
     <Compile Include="DTO\CarteringUsers.cs" />
     <Compile Include="DTO\ConstantDTO.cs" />
+    <Compile Include="DTO\LecturerInfoDTO.cs" />
     <Compile Include="DTO\InvoiceDTO.cs" />
     <Compile Include="DTO\AppUserRoleDTO.cs" />
     <Compile Include="DTO\TextDTO.cs" />
@@ -154,6 +155,7 @@
     <Compile Include="Services\EmailService.cs" />
     <Compile Include="Services\ExportService.cs" />
     <Compile Include="Services\LoginService.cs" />
+    <Compile Include="Services\LecturerInfoService.cs" />
     <Compile Include="Services\RegisterLecturerService.cs" />
     <Compile Include="Services\RegisterService.cs" />
     <Compile Include="Services\ResetPasswordService.cs" />
