Add registration for visitor.

--- a/ConferenceSystem/ConferenceSystemApp.csproj
+++ b/ConferenceSystem/ConferenceSystemApp.csproj
@@ -204,6 +204,7 @@
     <Compile Include="ViewModels\Admin\WorkshopUserViewModel.cs" />
     <Compile Include="ViewModels\User\ProfileViewModel.cs" />
     <Compile Include="ViewModels\User\WorkshopSelectViewModel.cs" />
+    <Compile Include="ViewModels\Visitor\RegisterFormVisitorViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -295,6 +296,7 @@
     <Content Include="Views\Lecturer\LecturerInfo.dothtml" />
     <Content Include="Views\User\PrivacyStatement.dothtml" />
     <Content Include="Views\User\Profile.dothtml" />
+    <Content Include="Views\Visitor\RegisterFormVisitor.dothtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
