--- a/ConferenceSystem.BL/ConferenceSystem.BL.csproj
+++ b/ConferenceSystem.BL/ConferenceSystem.BL.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Services\ExportService.cs" />
     <Compile Include="Services\LoginService.cs" />
     <Compile Include="Services\LecturerInfoService.cs" />
+    <Compile Include="Services\RegisterVisitorService.cs" />
     <Compile Include="Services\RegisterLecturerService.cs" />
     <Compile Include="Services\RegisterService.cs" />
     <Compile Include="Services\ResetPasswordService.cs" />
