--- a/ConferenceSystem.BL/ConferenceSystem.BL.csproj
+++ b/ConferenceSystem.BL/ConferenceSystem.BL.csproj
@@ -136,6 +136,7 @@
     <Compile Include="DTO\CarteringDTO.cs" />
     <Compile Include="DTO\CarteringUsers.cs" />
     <Compile Include="DTO\ConstantDTO.cs" />
+    <Compile Include="DTO\LectureDTO.cs" />
     <Compile Include="DTO\LecturerInfoDTO.cs" />
     <Compile Include="DTO\InvoiceDTO.cs" />
     <Compile Include="DTO\AppUserRoleDTO.cs" />
@@ -148,6 +149,7 @@
     <Compile Include="DTO\WorkshopDTO.cs" />
     <Compile Include="DTO\WorkshopsBlockDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\LectureService.cs" />
     <Compile Include="Services\ProfileService.cs" />
     <Compile Include="Services\AdminService.cs" />
     <Compile Include="Services\CarteringService.cs" />
