--- a/ConferenceSystem/ConferenceSystemApp.csproj
+++ b/ConferenceSystem/ConferenceSystemApp.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="DotvvmStartup.cs" />
+    <Compile Include="ViewModels\Admin\PresentationPresenter.cs" />
     <Compile Include="ViewModels\Admin\VisitorViewModel.cs" />
     <Compile Include="ViewModels\Admin\VisitorsViewModel.cs" />
     <Compile Include="ViewModels\Admin\ProfilePhotoPresenter.cs" />
@@ -186,7 +187,7 @@
     <Compile Include="ViewModels\Admin\SettingVariablesViewModel.cs" />
     <Compile Include="ViewModels\Admin\LecturersViewModel.cs" />
     <Compile Include="ViewModels\Admin\LecturerViewModel.cs" />
-    <Compile Include="ViewModels\Lecturer\AddMyLectureViewModel.cs" />
+    <Compile Include="ViewModels\Lecturer\MyLectureViewModel.cs" />
     <Compile Include="ViewModels\Lecturer\LecturerInfoViewModel.cs" />
     <Compile Include="ViewModels\Lecturer\MyLecturesViewModel.cs" />
     <Compile Include="ViewModels\PwdResetViewModel.cs" />
@@ -304,7 +305,7 @@
     <Content Include="Views\Admin\Visitors.dothtml" />
     <Content Include="Views\Admin\Visitor.dothtml" />
     <Content Include="Views\Lecturer\MyLectures.dothtml" />
-    <Content Include="Views\Lecturer\AddMyLecture.dothtml" />
+    <Content Include="Views\Lecturer\MyLecture.dothtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
